[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panel-sdk"
version = "0.1.0"
description = "thin server SDK for the panel HTTP api"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["panel_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
